--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,7 +4,7 @@ HTTP_SERVER:
   IDLE_TIMEOUT: 60s #время на соединение с пользователем
 
 POSTGRES:
-  POSTGRES_HOST: postgres
+  POSTGRES_HOST: localhost
   POSTGRES_USER: root
   POSTGRES_PASSWORD: 1234
   POSTGRES_DB: postgres
