--- a/config/config.yaml
+++ b/config/config.yaml
@@ -20,8 +20,10 @@ NOTIFICATION:
   PASSWORD: "sfmb oqfl uojk nwfw"
 
 KAFKA:
-  KAFKA_BROKERS:
-    - 127.0.0.1:9092
-  KAFKA_TOPIC:
-    - register
-    - update
+  brokers:
+    - "127.0.0.1:9095"
+    - "127.0.0.1:9096"
+    - "127.0.0.1:9097"
+  topics:
+    - "register"
+    - "update"
