--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,75 +1,76 @@
-version: "3.8"
-
-services:
-
+ervices:
   kafka-ui:
+    container_name: kafka-ui
     image: provectuslabs/kafka-ui:latest
     ports:
-      - "8080:8080"
+      - "9020:8080"
     environment:
-      - KAFKA_CLUSTERS_0_NAME=local
-      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka-1:9092,kafka-2:9092,kafka-3:9092
-      - KAFKA_CLUSTERS_0_ZOOKEEPER=zookeeper:2181
+      AUTH_TYPE: "DISABLED"
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAP_SERVERS: "kafka1:19092,kafka2:19093,kafka3:19094"
+      KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
+    depends_on:
+      - kafka1
+      - kafka2
+      - kafka3
+    networks:
+      - sso-network
 
   zookeeper:
-    image: zookeeper
-    ports:
-      - "2181:2181"
+    image: confluentinc/cp-zookeeper:7.6.0
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
-
-  kafka-1:
-    image: wurstmeister/kafka
+      ZOOKEEPER_TICK_TIME: 2000
     ports:
-      - "9095:9094"
-    environment:
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      - "2181:2181"
+    networks:
+      - sso-network
 
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-      KAFKA_LISTENERS: INTERNAL://kafka-1:9092,OUTSIDE://kafka-1:9094
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-1:9092,OUTSIDE://localhost:9095
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
-
-      KAFKA_LOG_DIRS: /kafka/logs
-      KAFKA_BROKER_ID: 500
-      KAFKA_offsets_topic_replication_factor: 3
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - ./kafka_data/500:/kafka
-
-  kafka-2:
-    image: wurstmeister/kafka
+  kafka1:
+    container_name: kafka1
+    image: confluentinc/cp-kafka:7.6.0
+    depends_on:
+      - zookeeper
     ports:
-      - "9096:9094"
+      - "9092:9092"
     environment:
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENERS: INTERNAL://kafka-2:9092,OUTSIDE://kafka-2:9094
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-2:9092,OUTSIDE://localhost:9096
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
-      KAFKA_LOG_DIRS: /kafka/logs
-      KAFKA_BROKER_ID: 501
-      KAFKA_offsets_topic_replication_factor: 3
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - ./kafka_data/501:/kafka
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,PLAINTEXT_INTERNAL://kafka1:19092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT_INTERNAL
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
 
-  kafka-3:
-    image: wurstmeister/kafka
+  kafka2:
+    image: confluentinc/cp-kafka:7.6.0
+    container_name: kafka2
+    depends_on:
+      - zookeeper
     ports:
-      - "9097:9094"
+      - "9093:9093"
     environment:
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-      KAFKA_LISTENERS: INTERNAL://kafka-3:9092,OUTSIDE://kafka-3:9094
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-3:9092,OUTSIDE://localhost:9097
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_BROKER_ID: 2
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LOG_DIRS: /kafka/logs
-      KAFKA_BROKER_ID: 502
-      KAFKA_offsets_topic_replication_factor: 3
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - ./kafka_data/502:/kafka
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9093,PLAINTEXT_INTERNAL://kafka2:19093
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT_INTERNAL
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+
+  kafka3:
+    image: confluentinc/cp-kafka:7.6.0
+    container_name: kafka3
+    depends_on:
+      - zookeeper
+    ports:
+      - "9094:9094"
+    environment:
+      KAFKA_BROKER_ID: 3
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9094,PLAINTEXT_INTERNAL://kafka3:19094
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT_INTERNAL
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
+  
   postgres:
       container_name: postgres
       image: postgres:15-alpine
